# moip_aira

./: .gitignore  CMakeLists.txt  Makefile  README.md  license.txt
1701.08920/: README.md  Timing.ods
Examples/: 2AP05.lp  2AP05.out  2KP50.lp  2KP50.out  3AP05.lp  3AP05.out  3KP10.lp  3KP10.out  4AP05.lp  4AP05.out  4KP10.lp  4KP10.out  CMakeLists.txt  moip_2_30_1_knapsack.mop  moip_2_30_1_knapsack.out
cmake_modules/: FindCPLEX.cmake
scripts/: checkResults.sh
src/: CMakeLists.txt  aira.c  aira.cpp  cluster.cpp  cluster.h  env.h  errors.h  lockingvars.cpp  lockingvars.h  mk_symgroup.py  problem.cpp  problem.h  result.cpp  result.h  sense.h  solutions.cpp  solutions.h  symgroup.h  thread.cpp  thread.h  threadstate.h
tests/: Makefile
utils/: threadsort.py
